# graphics-labs

./: .gitignore
lab1/: CMakeLists.txt
lab1/GL_helper/: EBO.cpp  VBO.cpp  VBO.h
lab1/src/: Color.cpp  Color.h  gui.cpp  gui.h  main.cpp
lab1/src/render/: cmykControls.h  extraControls.h  hsvControls.h  rgbControls.h
lab1/utils/: SystemInfo.h
lab2/: CMakeLists.txt  EXPLANATIONS_RU.md  PROJECT_SUMMARY.md  README.md  USAGE_RU.md  setup_dependencies.sh  third_party
lab2/GL_helper/: shaderClass.cpp  shaderClass.h
lab2/src/: Histogram.cpp  Histogram.h  Image.cpp  Image.h  ImageProcessor.cpp  ImageProcessor.h  ImageProcessorPart2.cpp  PointOperations.cpp  PointOperations.h  ThresholdProcessing.cpp  ThresholdProcessing.h  gui.cpp  gui.h  main.cpp
lab2/src/render/: histogramControls.h  imageDisplay.h  pointOperationsControls.h  thresholdControls.h
